# native-cpp-hbase-client

./: README.md
hbase/: BaseHbaseConnection.h  ConnectionPool.h  ConnectionPoolTest.cpp  Counters.h  HbcExtensions.h  Makefile.am  NativeHbaseClient-inl.cpp  NativeHbaseClient.cpp  NativeHbaseClient.h  configure.ac  hbase.thrift  hbc.cpp  nhc-config.h
hbase/testing/: NativeTesting.cpp
